# RelativisticRayTracer

./: .gitignore  CMakeLists.txt  README.md  run.bat
include/: camera_paths.h  config.h  densities.h  geodesics.h  integrators.h  math_utils.h  raymarcher.h
include/camera_effects/: camera_settings.h  post_processing.h
include/glad/: glad.h
src/: camera_paths.cpp  glad.c  main.cpp  raymarcher.cu
